Update namespace for proxied tools and validate